--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -102,12 +102,13 @@ stages:
               dockerRegistryEndpoint: $(dockerRegistryServiceConnection)
 
           # 🔹 2) backend-secrets 생성
-          - task: KubernetesManifest@0
+          - task: KubernetesManifest@1
             displayName: Create backend-secrets
             inputs:
               action: createSecret
               namespace: apfm
               secretName: backend-secrets
+              secretType: generic
               secretArguments: |
                 --from-literal=ACCOUNT_KEY=$(ACCOUNT_KEY)
                 --from-literal=ACCOUNT_NAME=$(ACCOUNT_NAME)
