--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,6 +8,10 @@ resources:
 - repo: self
 
 variables:
+# 🔹 DevOps Library (apfmk) 변수 그룹을 최상단에 명시해야 모든 Job에서 참조 가능
+- group: apfmk   
+
+# 🔹 파이프라인 내에서 사용할 개별 변수들
 - name: dockerRegistryServiceConnection
   value: '05c23959-ace4-4487-a73b-d09fe638aff7'
 - name: containerRegistry
@@ -16,7 +20,6 @@ variables:
   value: 'apfmrgf81e-auth'
 - name: vmImageName
   value: 'ubuntu-latest'
-- group: apfmk   # 🔹 DevOps Library 연결
 
 stages:
 # =========================
@@ -39,7 +42,7 @@ stages:
         buildContext: backend
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
-          latest
+          latest   # ✅ latest만 사용 (빌드ID 태그 제거)
 
   - job: Build_Frontend
     displayName: Build Frontend
@@ -63,7 +66,7 @@ stages:
         buildContext: front
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
-          latest
+          latest   # ✅ latest만 사용
 
   # 👉 k8s 디렉토리를 아티팩트로 업로드 (배포 단계에서 사용)
   - job: Publish_Manifests
@@ -99,7 +102,7 @@ stages:
               secretName: $(imagePullSecret)
               dockerRegistryEndpoint: $(dockerRegistryServiceConnection)
 
-          # 🔹 2) backend-secrets 생성
+          # 🔹 2) backend-secrets 생성 (Library 값 → Secret)
           - task: KubernetesManifest@1
             displayName: Create backend-secrets
             inputs:
@@ -137,3 +140,4 @@ stages:
                 frontend=$(containerRegistry)/frontend:latest
                 # fastapi는 기존 이미지(apfmrg.azurecr.io/fastapi:latest) 그대로 사용
                 # nginx는 Docker Hub 이미지 사용 → 매핑 불필요
+              rolloutStatusTimeout: 300   # 🔹 5분까지 rollout 대기 (CrashLoop 방지)
