--- a/k8s/backend-deploy.yaml
+++ b/k8s/backend-deploy.yaml
@@ -1,4 +1,3 @@
-# [기능 요약] Spring Boot 백엔드 외부 노출 (ClusterIP, 필요 시 LoadBalancer 교체 가능)
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -19,28 +18,24 @@ spec:
       containers:
         - name: backend
           image: apfmrg.azurecr.io/backend:latest
+          imagePullPolicy: Always   # ✅ 최신 이미지 항상 가져오기
           ports:
             - containerPort: 8082
           readinessProbe:
             httpGet:
               path: /actuator/health
               port: 8082
-            initialDelaySeconds: 120
+            initialDelaySeconds: 60
             periodSeconds: 10
-            timeoutSeconds: 3
-            failureThreshold: 5
           livenessProbe:
             httpGet:
               path: /actuator/health
               port: 8082
-            initialDelaySeconds: 150
+            initialDelaySeconds: 90
             periodSeconds: 20
-            timeoutSeconds: 3
-            failureThreshold: 5
           envFrom:
             - secretRef:
-                name: backend-secrets   # 🔹 DevOps Library 값들이 Secret으로 주입됨
-
+                name: backend-secrets   # DevOps에서 주입한 Secret 사용
 ---
 apiVersion: v1
 kind: Service
@@ -48,7 +43,7 @@ metadata:
   name: backend
   namespace: apfm
 spec:
-  type: ClusterIP   # 필요 시 LoadBalancer 로 교체 가능
+  type: ClusterIP
   selector:
     app: backend
   ports:
