--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -140,6 +140,6 @@ stages:
           - powershell: |
               kubectl apply -f k8s/backend-deploy.yaml -n $(namespace)
               kubectl apply -f k8s/front-deploy.yaml -n $(namespace)
-              kubectl apply -f k8s/fastapi-deploy.yaml -n $(namespace)
+              # kubectl apply -f k8s/fastapi-deploy.yaml -n $(namespace)
               kubectl apply -f k8s/nginx-lb.yaml -n $(namespace)
             displayName: "Apply manifests"
