--- a/k8s/front-deploy.yaml
+++ b/k8s/front-deploy.yaml
@@ -31,7 +31,7 @@ metadata:
   name: frontend
   namespace: apfm
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   selector:
     app: frontend
   ports:
